k8s/home/monitoring/0.init.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
